test_programs/compile_failure/noirc_frontend_tests_check_trait_impl_for_non_type/src/main.nr

    trait Default2 {
        fn default(x: Field, y: Field) -> Field;
    }

    impl Default2 for main {
        fn default(x: Field, y: Field) -> Field {
            x + y
        }
    }

    fn main() {}
    